--- a/Projetos -Dev. Full/02 Projeto - Calculadora de Médias/main.css
+++ b/Projetos -Dev. Full/02 Projeto - Calculadora de Médias/main.css
@@ -56,6 +56,8 @@ form button{
     font-weight: bold;
     cursor: pointer;
     padding: 8px;
+    border: none;
+    border-radius: 5px;
 }
 
 /*Estilizar a Tabela*/
