Atualização menu mobile

--- a/Projetos -Dev. Full/10 Exercicio - Loja_Responsiva/style.css
+++ b/Projetos -Dev. Full/10 Exercicio - Loja_Responsiva/style.css
@@ -391,10 +391,9 @@ footer{
         
     }
 
-   /* .menu {
+.menu {
         display: none;
-    } */
-
+    }
 
     .menu-hamburguer{
         display: block;        
