--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,4 @@
-/* @fontePrincipal:Roboto, sans-serif;
+@fontePrincipal:Roboto, sans-serif;
 @fonteDoTitulo:Lobster, cursive;
 @corDeTexto:#ffff;
 @corDeFundo:#eb3b5a;
@@ -18,7 +18,7 @@ body{
 h1{
     font-family: @fonteDoTitulo;
     font-size: 3em;
-} */
+}
 *{
     margin: 0;
     padding: 0;
@@ -69,3 +69,7 @@ h1{
     height: 100%;
     margin: 0;
 }
+
+.altura {
+    height:100px !important;
+ }
